Fixed footer spacing; Added <figure> tag in individual movie page;

--- a/css/movie-page.css
+++ b/css/movie-page.css
@@ -28,10 +28,9 @@ html {
     font-family: 'Merriweather Sans', sans-serif;
     font-size: 20px;
 }
+
 figure {
-    float: left;
-    margin: 1rem;
-    /* text-align: center; */
+    text-align: center;
 }
 
 figcaption {
@@ -40,77 +39,91 @@ figcaption {
     text-align: center;
 }
 
-div > p {
-    margin: 1rem;
-    padding: 1rem;
-   
-}
-.clear {
-    clear: both;
-}
-
-section div {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-}
-
 img {
     max-width: 200px;
     border: 2px solid darkslategray;
     border-radius: 5px;
+    display: block;
+    margin: auto;
+    margin-top: 2rem;
+    
 }
 
 a img:hover {
     box-shadow: 5px 10px;
-}
-
-nav {
-    background-color: darkslategrey;
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-nav ul {
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    list-style-type: none;
-}
-
-nav li {
-    display: block;
-    float: left;
-
-}
-
-nav a {
-    display: inline-block;
-    color: whitesmoke;
-    text-decoration: none;
-    padding: 14px 30px;
-    text-align: center;
-}
-
-nav a:hover {
-    background-color: whitesmoke;
     color: darkslategrey;
 }
 
+.myNav {
+    overflow: hidden;
+    background-color: darkslategrey;
+    position: relative;
+}
+
+/* Citation:
+ *  https://www.w3schools.com/howto/howto_js_mobile_navbar.asp
+ *  'mainMenu' links have to be hidden while the hamburger menu shows instead.
+ */    
+.myNav #mainMenu {
+    list-style-type: none;
+    display: none;
+}
+
+nav a {
+    display: block;
+    color: whitesmoke;
+    text-decoration: none;
+    padding: 14px 30px;
+  
+}
+
+nav a:hover {
+    color: whitesmoke;
+}
+
+/* Citation:
+ *  https://www.w3schools.com/howto/howto_js_mobile_navbar.asp
+ *  The below code block styles the Font Awesome (hamburger menu) icon.
+ */   
+nav a.icon {
+    background: darkslategrey;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+/* Citation:
+ *  https://www.w3schools.com/howto/howto_js_mobile_navbar.asp
+ *  The active element in the menu is styled in the active class below
+ */   
+.active {
+    background-color: darkslategrey;
+    color: white;
+  }
+
 h1 {
-    margin-top: 4rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
     text-align: center;
-    font-family: 'Lobster Regular', 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif; 
 }
 
 h2 {
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    padding-top: 1rem;
+    font-family: 'Lobster Regular', 'Montserrat', sans-serif;
+    padding-top: 2rem;
     padding-bottom: 2rem;
+}
+
+h3 {
+    padding-top: 2rem;
+    padding-bottom: 1rem;  
+}
+
+p {
+    margin-bottom: 2rem;
 }
 
 footer {
@@ -119,31 +132,12 @@ footer {
     background-color: darkslategrey;
     color: whitesmoke;
     padding-top: 0.6rem;
-    padding-bottom: 0.6rem;
-    position: fixed;
-    bottom: 0;
+    padding-bottom: 0.4rem;
     width: 100%;
 }
 
-.movie-background {
-    background-image: url("/img/brick-wall-backdrop.jpg");
-    background-size: cover;
-    height: 100vh;
-}
-
-.movie-textbox {
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100vh;
-    background-color: #ffffff;
-    text-align: center;
-}
-
-.movie-textbox ul {
-    text-decoration: none;
-    list-style-type: none;
-    padding-top: 1rem;
+footer a {
+    color: whitesmoke;
 }
 
 /* link@ 
